fix spacing in the tools section

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -231,7 +231,7 @@ input, select, textarea {
 		}
 
 	.tools {
-		padding-top: 2.5em;
+		padding-top: 6em;
 	}
 
 /* Container */
